fixed navbar bugs of navbar losing width and screen jumping when you scroll down

--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,7 @@ body {
     background-color: #16a085;
     padding: 20px 10px;
     z-index: 100;
+    width: 100%;
 }
 
 #navigation li {
